--- a/app/src/main/res/layout/fragment_trip_nav.xml
+++ b/app/src/main/res/layout/fragment_trip_nav.xml
@@ -1,15 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="Shipments_Trips_classes.TripNavFragment">
+    android:layout_height="match_parent">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <!-- Main content -->
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/user_trips_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Trip"
-        android:textSize="50dp" />
+        android:layout_alignParentBottom="true"
+        android:background="@color/down"
+        android:drawSelectorOnTop="true"
+        android:orientation="vertical" />
+    <TextView
+        android:id="@+id/no_trips_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="You have no trips yet"
+        android:textSize="40sp" />
 
-</FrameLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_button_trip_nav"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:srcCompat="@drawable/bushape"
+        tools:ignore="RelativeOverlap" />
+
+</RelativeLayout>
