--- a/app/src/main/res/layout/trip_item.xml
+++ b/app/src/main/res/layout/trip_item.xml
@@ -1,163 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- this layout is for the items we insert in the Adapter -->
-<androidx.cardview.widget.CardView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="130dp">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/gray1">
-
-        <!-- TODO Upper part of Shipment Item-->
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:orientation="vertical"
-            android:id="@+id/trip_item_upper_part">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="2"
-                    android:orientation="horizontal">
-                    <TextView
-                        android:id="@+id/trip_item_country_from"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginLeft="10dp"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:textColor="@android:color/white"
-                        android:textSize="25sp"
-                        tools:text="countery from" />
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="10dp"
-                        android:scaleType="fitXY"
-                        android:layout_gravity="center_vertical"
-                        android:layout_marginRight="35dp"
-                        android:layout_marginLeft="35dp"
-                        android:src="@drawable/ic_launcher_background"
-                        />
-                    <TextView
-                        android:id="@+id/trip_item_country_to"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_vertical"
-                        android:textAppearance="?android:textAppearanceMedium"
-                        android:textColor="@android:color/white"
-                        android:textSize="25sp"
-                        tools:text="countery to" />
-                </LinearLayout>
-                <TextView
-                    android:id="@+id/trip_item_date"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"  android:textStyle="italic"
-                    android:layout_marginLeft="15dp"
-                    tools:text="10/15/2020" />
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1.7"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@mipmap/ic_launcher_round"
-                    />
-                <TextView
-                    android:id="@+id/trip_item_available_weight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    tools:text="available weight 15kg" />
-
-                <ImageView
-                    android:layout_width="20dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="20dp"
-                    android:src="@mipmap/ic_launcher"
-                    />
-                <TextView
-                    android:id="@+id/trip_item_consumed_weight"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:textColor="@android:color/white"
-                    android:textStyle="bold"
-                    android:textSize="14sp"
-                    tools:text="consumed weight 3kg" />
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <!-- TODO LowerPart of Shipment Item-->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_below="@+id/trip_item_upper_part"
-            android:background="@color/gray2">
+    android:layout_height="205dp">
 
 
-            <!-- 2) mid lower part (img + txt + rating bar)-->
-            <ImageView
-                android:id="@+id/trip_item_profile_img"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:src="@drawable/ic_launcher_background"
-                android:layout_marginLeft="70dp"
-                android:layout_marginTop="10dp"/>
-            <TextView
-                android:id="@+id/trip_item_profile_name"
-                android:layout_width="110dp"
-                android:layout_height="21dp"
-                android:layout_marginLeft="7dp" android:layout_marginTop="8dp"
-                android:layout_toRightOf="@+id/trip_item_profile_img"
-                android:textAppearance="?android:textAppearanceMedium"
-                android:textColor="@android:color/white"
-                android:textSize="15dp"
-                android:textStyle="bold"
-                tools:text="Mayer Emad" />
-            <RatingBar
-                android:id="@+id/trip_item_rating_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="15dp"
-                style="?android:attr/ratingBarStyleSmall"
-                android:layout_below="@+id/trip_item_profile_name"
-                android:layout_toRightOf="@+id/trip_item_profile_img"
-                android:layout_marginLeft="7dp"
-                android:numStars="5"
-                android:rating="4.3"
-                android:stepSize="0.1" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/trip_item_upper_part"
+        android:layout_width="393dp"
+        android:layout_height="130dp"
+        android:background="#6985A1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-            <!-- 3) right lower part (btn)-->
-            <Button
-                android:id="@+id/trip_item_request_btn"
-                android:layout_width="120dp"
-                android:layout_height="35dp"
-                android:text="send request ?"
-                android:textSize="11sp" android:textStyle="italic"
-                android:layout_marginLeft="7dp" android:layout_marginTop="8dp"
-                android:background="#FF0"
-                android:layout_toRightOf="@id/trip_item_profile_name"
-                />
-        </RelativeLayout>
 
-    </RelativeLayout>
+        <TextView
+            android:id="@+id/trip_item_country_from"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="countery from" />
 
-</androidx.cardview.widget.CardView>
+        <ImageView
+            android:id="@+id/trip_item_arrow_image"
+            android:layout_width="30dp"
+            android:layout_height="10dp"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="30dp"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_launcher_background"
+            app:layout_constraintStart_toEndOf="@+id/trip_item_country_from"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/trip_item_country_to"
+            android:layout_width="160dp"
+            android:layout_height="40dp"
+            android:layout_marginStart="13dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/trip_item_arrow_image"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="countery to" />
+
+        <TextView
+            android:id="@+id/trip_item_date"
+            android:layout_width="300dp"
+            android:layout_height="26dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="3dp"
+            android:gravity="center_vertical"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="16sp"
+            android:textStyle="italic"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_country_from"
+            tools:text="10/15/2020" />
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="12dp"
+            android:src="@mipmap/ic_launcher_round"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_date" />
+
+        <TextView
+            android:id="@+id/trip_item_available_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_date"
+            tools:text="available weight 15kg" />
+
+        <ImageView
+            android:id="@+id/imageView3"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="12dp"
+            android:src="@mipmap/ic_launcher"
+            app:layout_constraintStart_toEndOf="@+id/trip_item_available_weight"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_date" />
+
+        <TextView
+            android:id="@+id/trip_item_consumed_weight"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="12dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="14sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/imageView3"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_date"
+            tools:text="consumed weight 3kg" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="393dp"
+        android:layout_height="70dp"
+        android:background="#7AA7BF"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/trip_item_upper_part">
+
+        <ImageView
+            android:id="@+id/trip_item_profile_img"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="64dp"
+            android:layout_marginTop="11dp"
+            android:src="@drawable/ic_launcher_background"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RatingBar
+            android:id="@+id/trip_item_rating_bar"
+            style="?android:attr/ratingBarStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="15dp"
+            android:layout_below="@+id/trip_item_profile_name"
+            android:layout_marginStart="5dp"
+            android:layout_toRightOf="@+id/trip_item_profile_img"
+            android:numStars="5"
+            android:rating="4.3"
+            android:stepSize="0.1"
+            app:layout_constraintStart_toEndOf="@+id/trip_item_profile_img"
+            app:layout_constraintTop_toBottomOf="@+id/trip_item_profile_name" />
+
+        <TextView
+            android:id="@+id/trip_item_profile_name"
+            android:layout_width="110dp"
+            android:layout_height="21dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:textColor="@android:color/white"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/trip_item_profile_img"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Mayer Emad" />
+
+        <Button
+            android:id="@+id/trip_item_request_btn"
+            android:layout_width="120dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="35dp"
+            android:background="#FF0"
+            android:text="send request ?"
+            android:textSize="12sp"
+            android:textStyle="italic"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
