--- a/app/src/main/res/layout/activity_edit_shipment.xml
+++ b/app/src/main/res/layout/activity_edit_shipment.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/edit_shipment_warning_text"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="left"
@@ -16,8 +16,9 @@
         android:text="@string/upload_word"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.578"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/edit_shipment_warning_text" />
 
     <EditText
         android:id="@+id/edit_shipment_item_urll"
@@ -235,7 +236,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/edit_shipment_warning_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
