--- a/app/src/main/res/layout/activity_shipment_deal_path.xml
+++ b/app/src/main/res/layout/activity_shipment_deal_path.xml
@@ -6,12 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/shipment_deal_path_step_5"
         android:layout_width="121dp"
         android:layout_height="80dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/shipper_confirmation_text"
@@ -19,12 +19,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_4" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/shipment_deal_path_step_4"
         android:layout_width="121dp"
         android:layout_height="80dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/meet_shipper_text"
@@ -32,12 +32,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_3" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/shipment_deal_path_step_3"
         android:layout_width="121dp"
         android:layout_height="80dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/reach_destination_text"
@@ -45,12 +45,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_2" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/shipment_deal_path_step_2"
         android:layout_width="121dp"
         android:layout_height="80dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="16dp"
         android:scaleX="3"
         android:scaleY="3"
         android:text="@string/fly_from_home_text"
@@ -58,19 +58,59 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_1" />
 
-    <RadioButton
+    <CheckBox
         android:id="@+id/shipment_deal_path_step_1"
         android:layout_width="121dp"
         android:layout_height="80dp"
         android:layout_marginStart="136dp"
-        android:layout_marginTop="64dp"
-        android:checked="true"
+        android:layout_marginTop="24dp"
         android:scaleX="3"
         android:scaleY="3"
-        android:buttonTint="@color/red"
         android:text="@string/receive_shipment_text"
-        android:textColorHighlight="@color/red"
         android:textSize="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/shipment_deal_path_progress_button"
+        android:layout_width="0dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="110dp"
+        android:background="#0288D1"
+        android:text="progress"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_step_5" />
+
+    <RatingBar
+        android:id="@+id/shipment_deal_path_rating_bar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="74dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="74dp"
+        android:numStars="5"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_progress_button" />
+
+    <Button
+        android:id="@+id/shipment_deal_path_rate_button"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="130dp"
+        android:background="#689F38"
+        android:visibility="invisible"
+        android:text="@string/rate_word"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shipment_deal_path_rating_bar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
