--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,6 @@
     <color name="down">#cacac1</color>
     <color name="red">#FFCC0000</color>
     <color name="green">#FF99CC00</color>
+    <color name="blue">#FF0288D1</color>
+
 </resources>
